--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,16 +3,9 @@ on:
   pull_request:
   push:
     branches: main
-    paths:
-      - 'lxc/*.py'
-      - '.github/workflows/check.yml'
-      - 'kernelsu/*.py'
-      - 'rekernel/*.py'
-      - 'nethunter/*.py'
 
 jobs:
-
-  sh-check:
+  python-lint:
     runs-on: ubuntu-latest
     container: debian:sid
     permissions:
@@ -40,3 +33,44 @@ jobs:
           A=$(find | grep .py )
           mv a .pylintrc
           pylint $A
+
+  typescript-lint:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v6
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'yarn'
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Run ESLint
+        run: yarn lint
+      - name: Check formatting
+        run: yarn format:check
+
+  typescript-build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v6
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'yarn'
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Build with ncc
+        run: yarn build
+      - name: Check dist is up to date
+        run: |
+          if [ -n "$(git status --porcelain dist/)" ]; then
+            echo "::error::dist/ is not up to date. Run 'yarn build' and commit the changes."
+            git status dist/
+            exit 1
+          fi
