dep: chore(build): Use esbuild

--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "Android Kernel Build Action",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf dist && ncc build src/index.ts -o dist && ncc build src/post.ts -o dist/post",
+    "build": "rm -rf dist && esbuild src/index.ts --bundle --platform=node --target=node20 --outfile=dist/index.js && esbuild src/post.ts --bundle --platform=node --target=node20 --outfile=dist/post/index.js --format=cjs",
+    "build:ncc": "rm -rf dist && ncc build src/index.ts -o dist && ncc build src/post.ts -o dist/post",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts"
   },
   "dependencies": {
-    "@actions/artifact": "^5.0.1",
-    "@actions/cache": "^5.0.2",
-    "@actions/core": "^2.0.1",
-    "@actions/exec": "^2.0.0",
-    "@actions/github": "^8.0.0",
-    "@actions/tool-cache": "^3.0.0",
+    "@actions/artifact": "^6.0.0",
+    "@actions/cache": "^6.0.0",
+    "@actions/core": "^3.0.0",
+    "@actions/exec": "^3.0.0",
+    "@actions/github": "^9.0.0",
+    "@actions/tool-cache": "^4.0.0",
     "@octokit/core": "^7.0.6",
     "@octokit/graphql": "^9.0.3",
     "@octokit/request": "^10.0.7",
@@ -27,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
     "@vercel/ncc": "^0.38.1",
+    "esbuild": "^0.27.3",
     "eslint": "^10.0.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.4"
