--- a/.github/workflows/boston.yml
+++ b/.github/workflows/boston.yml
@@ -1,6 +1,8 @@
 name: Boston-SusFS-Build
 on:
-  workflow_dispatch:`n  push:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
