--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,22 @@
-# A simple action usage
 name: Build Kernel
 on:
   workflow_dispatch:
-
+  push:
+    branches: [ main ]
 jobs:
-  Build-Kernel:
-    strategy:
-      fail-fast: false
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Build Kernel
         uses: dabao1955/kernel_build_action@main
         with:
-          kernel-url: https://github.com/AcmeUI-Devices/android_kernel_xiaomi_cas
-          kernel-dir: msm-4.19
-          kernel-branch: taffy
-          config: cas_defconfig
+          kernel-url: https://github.com/MotorolaMobilityLLC/kernel-msm
+          kernel-branch: MMI-U2UBS34.44-57-8-7
+          config: boston_defconfig
           arch: arm64
           aosp-gcc: true
           aosp-clang: true
-          ksu: true
-          ksu-version: main
-          android-version: 12
-          aosp-clang-version: r383902
-          disable-lto: true
-          anykernel3: true
+          susfs: true
+          susfs-patch-dir: patches
