--- a/.github/workflows/main_build.yml
+++ b/.github/workflows/main_build.yml
@@ -1,1 +1,23 @@
-name: Boston-Final-Buildecho on:echo   workflow_dispatch:echo jobs:echo   build:echo     runs-on: ubuntu-latestecho     steps:echo       - name: Checkoutecho         uses: actions/checkout@v4echo       - name: Build Kernelecho         uses: dabao1955/kernel_build_action@mainecho         with:echo           kernel-url: https://github.com/MotorolaMobilityLLC/kernel-msmecho           kernel-branch: MMI-U2UBS34.44-57-8-7echo           config: boston_defconfigecho           arch: arm64echo           aosp-gcc: trueecho           aosp-clang: trueecho           ksu: trueecho           ksu-version: mainecho           extra-make-args: [ "LD=ld.lld", "LLVM=1", "LLVM_IAS=1" ]
+name: Boston-Final-Build
+on:
+  workflow_dispatch:
+  push:
+    branches: [ main ]
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build Kernel
+        uses: dabao1955/kernel_build_action@main
+        with:
+          kernel-url: https://github.com/MotorolaMobilityLLC/kernel-msm
+          kernel-branch: MMI-U2UBS34.44-57-8-7
+          config: boston_defconfig
+          arch: arm64
+          aosp-gcc: true
+          aosp-clang: true
+          ksu: true
+          ksu-version: main
+          extra-make-args: [ "LD=ld.lld", "LLVM=1", "LLVM_IAS=1" ]
