--- a/.github/workflows/main_build.yml
+++ b/.github/workflows/main_build.yml
@@ -1,8 +1,6 @@
 name: Boston-Final-Build
 on:
   workflow_dispatch:
-  push:
-    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,5 +16,7 @@ jobs:
           arch: arm64
           aosp-gcc: true
           aosp-clang: true
+          aosp-clang-version: r522815
           ksu: true
           ksu-version: main
+          disable-lto: true
