Fix: Update AOSP Clang version to r450784d to resolve 400 error

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,6 @@ jobs:
           ksu: true
           ksu-version: main
           android-version: 12
-          aosp-clang-version: r383902
+          aosp-clang-version: r450784d
           disable-lto: true
           anykernel3: true
