--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,20 @@
-name: CI
+name: Kernel Build
 on:
-  push:
-    branches: main
-    paths:
-      - '.github/workflows/main.yml'
-      - 'action.yml'
-      - 'src/*.ts'
-      - 'package.json'
-
-  pull_request:
   workflow_dispatch:
-
 jobs:
-  ci-test:
-    name: Build Kernel
-    strategy:
-      fail-fast: false
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v6
-      with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.ref }}
-
-    - name: Build Kernel
-      uses: ./
-      with:
-          kernel-url: https://github.com/AcmeUI-Devices/android_kernel_xiaomi_cas
-          kernel-dir: msm-4.19
-          kernel-branch: taffy
-          config: cas_defconfig
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build Kernel
+        uses: dabao1955/kernel_build_action@main
+        with:
+          kernel-url: https://github.com/MotorolaMobilityLLC/kernel-msm
+          kernel-branch: mmi-U2UBS34.44-57-8-7
+          config: vendor/pstar_defconfig
           arch: arm64
-          aosp-gcc: true
-          aosp-clang: true
+          aosp-clang: false
+          other-clang-url: "https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/tags/android-cts-11.0_r1/clang-r383902.tar.gz"
           ksu: true
           ksu-version: main
-          android-version: 12
-          aosp-clang-version: r450784d
-          disable-lto: true
-          anykernel3: true
