Add AOSP GCC requirement

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,5 +16,6 @@ jobs:
           arch: arm64
           aosp-clang: true
           aosp-clang-version: r416183b1
+          aosp-gcc: true
           ksu: true
           ksu-version: main
