--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,5 +5,5 @@ jobs:
   debug:
     runs-on: ubuntu-latest
     steps:
-      - name: Check Environment
-        run: echo           curl -s https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+refs/heads/master?format=JSON | grep -oP "clang-r\d+[a-z0-9]+" | head -n 20
+      - name: Get Clang List
+        run: curl -s "https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+refs/heads/master?format=JSON" | grep -oP "clang-r\d+[a-z0-9]+" | head -n 20
