--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,9 @@ jobs:
       - name: Checkout Build Repo 
         uses: actions/checkout@v4 
       - name: Pull Motorola Source 
-        run: git clone https://github.com/MotorolaMobilityLLC/kernel-msm --depth 1 . 
+        run: | 
+          git clone https://github.com/MotorolaMobilityLLC/kernel-msm --depth 1 motorola-kernel 
+          cp -r motorola-kernel/. . && rm -rf motorola-kernel 
       - name: Install Deps 
         run: sudo apt-get update && sudo apt-get install -y build-essential bc bison flex libssl-dev libelf-dev clang lld llvm 
       - name: Toolchains 
