--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,1 @@
-name: Build Kernel 
-on: 
-  workflow_dispatch: 
-  push: 
-    branches: [ main ] 
-jobs: 
-  build: 
-    runs-on: ubuntu-latest 
-    steps: 
-      - name: Checkout Build Repo 
-        uses: actions/checkout@v4 
-      - name: Pull Motorola Source 
-        run: | 
-          git clone https://github.com/MotorolaMobilityLLC/kernel-msm --depth 1 motorola-kernel 
-          cp -r motorola-kernel/. . && rm -rf motorola-kernel 
-      - name: Install Deps 
-        run: sudo apt-get update && sudo apt-get install -y build-essential bc bison flex libssl-dev libelf-dev clang lld llvm 
-      - name: Toolchains 
-        run: | 
-          mkdir -p prebuilts/gcc/linux-x86/aarch64 
-          mkdir -p prebuilts/gcc/linux-x86/arm 
-          git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9 -b master --depth 1 prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9 
-          git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9 -b master --depth 1 prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9 
-      - name: Build 
-        run: | 
-          make O=out ARCH=arm64 CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=$(pwd)/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/bin/aarch64-linux-android- CROSS_COMPILE_ARM32=$(pwd)/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/bin/arm-linux-androideabi- -j$(nproc) 
+name: Build Kernel`non: [push, workflow_dispatch]`njobs:`n  build:`n    runs-on: ubuntu-latest`n    steps:`n      - name: Checkout`n        uses: actions/checkout@v4`n      - name: Pull Source`n        run: |`n          git clone https://github.com/MotorolaMobilityLLC/kernel-msm --depth 1 source`n          cp -r source/. . && rm -rf source`n      - name: Deps`n        run: sudo apt-get update && sudo apt-get install -y build-essential bc bison flex libssl-dev libelf-dev clang lld llvm`n      - name: Toolchains`n        run: |`n          mkdir -p prebuilts/gcc/linux-x86/aarch64 && mkdir -p prebuilts/gcc/linux-x86/arm`n          git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9 -b master --depth 1 prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9`n          git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9 -b master --depth 1 prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9`n      - name: Build`n        run: |`n          make O=out ARCH=arm64 CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=$(pwd)/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/bin/aarch64-linux-android- CROSS_COMPILE_ARM32=$(pwd)/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/bin/arm-linux-androideabi- -j$(nproc)
