--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Kernel Build
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -16,19 +16,9 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential bc bison flex libssl-dev libelf-dev clang lld llvm curl git
-
-    - name: Cache Kernel Source
-      id: cache-kernel
-      uses: actions/cache@v4
-      with:
-        path: kernel
-        key: kernel-mmi-U2UBS34.44-57-8-7
-        restore-keys: |
-          kernel-mmi-
+        sudo apt-get install -y build-essential bc bison flex libssl-dev libelf-dev clang lld llvm curl git libtfm-dev
 
     - name: Clone Motorola Source
-      if: steps.cache-kernel.outputs.cache-hit != 'true'
       run: |
         git config --global http.postBuffer 524288000
         git config --global core.compression 0
@@ -43,9 +33,7 @@ jobs:
       run: |
         export PATH=$(pwd)/clang/bin:$PATH
         cd kernel
-        # Set up the configuration for pstar
         make O=out ARCH=arm64 pstar_defconfig
-        # Start the actual compilation
         make -j$(nproc) O=out ARCH=arm64 \
           CC=clang \
           CLANG_TRIPLE=aarch64-linux-gnu- \
